# agentic-news-crawler

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  conftest.py  docker-compose.yml  main.py  pyproject.toml
docker/: Dockerfile.engine  Dockerfile.gradio  docker-compose.yml
docs/: 27.05.26-autonomous_trading_agent_overview_research_Tu_Anh.md  architecture.md  crawl-tool-intern-plan.md  crawl_tool_intern_plan.md  fix_week4_plan.md  implementation_spec.md  week1_research_report.md  week4_issue.md
docs/reports/: week1_research_report.md  week2_implementation_report.md  week3_implementation_report.md  week4_implementation_report.md  week5_implementation_report.md  week6_implementation_report.md
docs/standards/: coding_style.md  doc_style.md
prompts/: extract.j2  infer_schema.j2  system.j2  user_turn.j2
src/: agent.py  crawler.py  date_filter.py  extractor.py  logging_config.py  output.py  prompts.py  schema_registry.py  ui.py  ui_results.py
src/models/: __init__.py
tests/: conftest.py  test_agent.py  test_agent_execute_tool_extract.py  test_agent_execute_tool_finish.py  test_agent_execute_tool_frontier.py  test_agent_execute_tool_mark_visited.py  test_agent_helpers.py  test_agent_run_agent.py  test_crawler_fetch_page.py  test_date_filter.py  test_dev_ui.py  test_extractor.py  test_extractor_extract.py  test_extractor_infer_schema.py  test_integration.py  test_logging_config.py  test_main_build_parser.py  test_main_run.py  test_output.py  test_output_write_json.py  test_output_write_jsonl.py  test_output_write_results.py  test_prompts.py  test_render.py  test_schema_registry.py  test_ui.py  test_ui_results.py
tests/engine/: test_agent_execute_tool_extract.py  test_agent_execute_tool_finish.py  test_agent_execute_tool_frontier.py  test_agent_execute_tool_mark_visited.py  test_agent_helpers.py  test_agent_run_agent.py  test_config.py  test_contract.py  test_crawler_fetch_page.py  test_date_filter.py  test_extractor_extract.py  test_extractor_infer_schema.py  test_integration.py  test_logging_config.py  test_main_build_parser.py  test_main_run.py  test_output_serialize_payload.py  test_output_write_json.py  test_output_write_jsonl.py  test_output_write_results.py  test_prompt_parser.py  test_proxy.py  test_query.py  test_render.py  test_runner.py  (+4 more)
(+65 files in other folders)
