[project]
name = "crawl-tool"
version = "0.1.0"
description = "Agent-driven LLM crawler with structured extraction"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "crawl4ai>=0.4.0",
    "playwright>=1.44.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.23.0",
    "python-dateutil>=2.9.0",
    "dateparser>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
