[project]
name = "crawl-tool"
version = "0.1.0"
description = "Agent-driven LLM crawl tool with Gradio UI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "crawl4ai==0.8.6",
    "playwright>=1.44.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.23.0",
    "python-dateutil>=2.9.0",
    "dateparser>=1.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "structlog>=24.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "gradio>=6.0.1,<7",
    "httpx>=0.27.0",
    "minio>=7.2.0",
    "duckdb>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.4.0",
    "certifi>=2024.0.0",
]

[project.scripts]
crawl-tool = "crawl_tool.engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl_tool"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".claude", ".superpowers"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib", "-m", "not integration"]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that hit real sites and the Claude API (deselect with '-m not integration')",
    "slow: tests that take more than a few seconds",
]
